--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.62.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
+    "cron": "^1.2.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
+    "kue": "^0.11.6",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
     "serve-favicon": "^2.4.3"
